--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,9 +120,11 @@
     display: block !important;
   }
 
-  html,
-body {
+  html,body {
   height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .form-signin {
@@ -182,4 +184,123 @@ body {
 }
 a:visited{
   color: var(--bs-visited-link-color);
+}
+#profileImage .bi-person-circle{
+  font-size: 18rem;
+}
+#profileImage, #authorInfo{
+  width: 50%;
+}
+
+#profileImage img{
+  border-radius: 50%;
+  width: 100%;
+  object-fit: cover;
+  max-width: 300px;
+  min-width: 200px;
+  aspect-ratio: 1;
+}
+.instagram-icon-colored:before{
+  background: radial-gradient(circle farthest-corner at 35% 90%, #fec564, transparent 50%), radial-gradient(circle farthest-corner at 0 140%, #fec564, transparent 50%), radial-gradient(ellipse farthest-corner at 0 -25%, #5258cf, transparent 50%), radial-gradient(ellipse farthest-corner at 20% -50%, #5258cf, transparent 50%), radial-gradient(ellipse farthest-corner at 100% 0, #893dc2, transparent 50%), radial-gradient(ellipse farthest-corner at 60% -20%, #893dc2, transparent 50%), radial-gradient(ellipse farthest-corner at 100% 100%, #d9317a, transparent), linear-gradient(#6559ca, #bc318f 30%, #e33f5f 50%, #f77638 70%, #fec66d 100%);
+  -webkit-background-clip: text;
+          /* Also define standard property for compatibility */
+          background-clip: text;
+  color: transparent;
+  
+}
+.twitter-icon-colored:before{
+  color:#1DA1F2;
+}
+.facebook-icon-colored:before{
+  background: linear-gradient(45deg, #1877f2 0%, #1877f2 25%, #1877f2 50%, #1877f2 75%, #1877f2 100%);
+    -webkit-background-clip: text;
+    color: transparent;
+}
+.calendar-check-icon::before {
+  background: linear-gradient(45deg, #ff6b6b, #c738d8, #6b6bff, #38d8c7);
+  -webkit-background-clip: text;
+  color: transparent;
+}
+.user-icon::before{
+  background: linear-gradient(135deg, #ff0044, #ff0062, #ff46a3);
+    -webkit-background-clip: text;
+    color: transparent;
+}
+.email-icon::before {
+  background: linear-gradient(135deg, #ffcc33, #ff9933, #ff6600);
+    -webkit-background-clip: text;
+    color: transparent;
+}
+.bio-icon::before {
+  background: linear-gradient(135deg, #009242, #ff0040, #ff00ff);
+    -webkit-background-clip: text;
+    color: transparent;
+}
+.settings-icon::before {
+  background: linear-gradient(135deg, hsl(298, 100%, 61%), #5c37ff);
+  -webkit-background-clip: text;
+  color: transparent;
+}
+.email-icon,.user-icon,.calendar-check-icon,.bio-icon,.settings-icon{
+  font-weight: bolder;
+}
+
+@media screen and (max-width: 500px) {
+  #profileImage{
+    position: relative;
+    top: -1rem;
+  }
+  #profileImage .bi-person-circle{
+    font-size: 10rem;
+  }
+}
+@media screen and (max-width: 992px) {
+  #topMostNewsImage{
+    width: 100% !important;
+    max-width: 70% !important;
+  }
+  #topMostNews{
+    flex-direction: column-reverse;
+  }
+}
+@media screen and (max-width: 768px) {
+  #authorInfo{
+    width: 100%;
+  }
+  #profileInfo{
+    flex-wrap: wrap;
+  }
+  #profileImage{
+    position: relative;
+    top: -2rem;
+  }
+  #profileImage img{
+    max-width: 200px;
+    min-width: 150px;
+  }
+  #profileImage .bi-person-circle{
+    font-size: 14rem;
+  }
+  #profileImage{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .news-card .stretched-link img{
+    border-top-right-radius: var(--bs-border-radius)!important;
+    border-bottom-right-radius: var(--bs-border-radius)!important;
+  }
+  #topMostNewsImage{
+    width: 100% !important;
+    max-width: 100% !important;
+  }
+  .row{
+    margin: 0 !important;
+  }
+  .row>*{
+    padding: 0 !important;
+    margin: 0 !important;
+  }
 }
