Verification token length env variable applied and rescent news image size problem resolved

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -250,6 +250,10 @@ a:visited{
   font-weight: bolder;
 }
 
+.recent-article-img{
+  max-width: 100%;
+}
+
 @media screen and (max-width: 500px) {
   #profileImage{
     position: relative;
