--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -268,6 +268,9 @@ a:visited{
 .ql-editor p{
   margin-bottom: 1rem !important;
 }
+.news-card-image{
+  justify-content: start;
+}
 
 @media screen and (max-width: 500px) {
   #profileImage{
@@ -293,6 +296,9 @@ a:visited{
   }
 }
 @media screen and (max-width: 768px) {
+  .news-card-image{
+    justify-content: center;
+  }
   #authorInfo{
     width: 100%;
   }
