--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -202,11 +202,27 @@
 a:visited{
   color: var(--bs-visited-link-color);
 }
+#profileImage{
+  cursor: pointer;
+  height: 18rem;
+  aspect-ratio: 1;
+  border-radius: 50%;
+}
+#profileImage .overlay {
+  background-color: rgba(var(--bs-body-bg-rgb),0.5);
+  height: 0;
+  overflow: hidden; /* Hides content when height is 0 */
+  transition: height 0.5s ease-out;
+}
+
+#profileImage:hover .overlay {
+  height: 50%; /* Expands to desired height on hover */
+}
 #profileImage .bi-person-circle{
   font-size: 18rem;
 }
-#profileImage, #authorInfo{
-  width: 50%;
+#profileImage .bi-person-circle::before{
+  position: absolute;
 }
 
 #profileImage img{
@@ -276,6 +292,7 @@ a:visited{
   #profileImage{
     position: relative;
     top: -1rem;
+    height: 10rem;
   }
   #profileImage .bi-person-circle{
     font-size: 10rem;
@@ -300,7 +317,7 @@ a:visited{
     justify-content: center;
   }
   #authorInfo{
-    width: 100%;
+    width: 100% !important;
   }
   #profileInfo{
     flex-wrap: wrap;
@@ -308,6 +325,7 @@ a:visited{
   #profileImage{
     position: relative;
     top: -2rem;
+    height: 14rem;
   }
   #profileImage img{
     max-width: 200px;
@@ -317,7 +335,7 @@ a:visited{
     font-size: 14rem;
   }
   #profileImage{
-    width: 100%;
+    width: 100% !important;
     display: flex;
     align-items: center;
     justify-content: center;
