Improved modal restoring to original options and improved profile pic width span

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -335,7 +335,8 @@ a:visited{
     font-size: 14rem;
   }
   #profileImage{
-    width: 100% !important;
+    width: auto !important;
+    margin: auto;
     display: flex;
     align-items: center;
     justify-content: center;
